# muster-fork

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  SPECIFICATION.md  demo-notifications.sh
.config/: nextest.toml
.github/workflows/: close-external-prs.yml
crates/muster/: Cargo.toml
crates/muster-cli/: Cargo.toml
crates/muster-cli/src/: cli.rs  editing.rs  error.rs  format.rs  main.rs  ports.rs  proctree.rs  resources.rs  tabs.rs  terminal.rs
crates/muster-cli/src/commands/: attach.rs  color.rs  hooks.rs  inspect.rs  kill.rs  launch.rs  list.rs  mod.rs  new.rs  notifications.rs  peek.rs  pin.rs  profile.rs  settings.rs  status.rs
crates/muster-cli/tests/: cli_integration.rs
crates/muster-notify/: Cargo.toml
crates/muster-notify/src/: main.rs
crates/muster/src/: error.rs  lib.rs  muster.rs
crates/muster/src/config/: mod.rs  profile.rs  settings.rs
crates/muster/src/config/snapshots/: muster__config__profile__tests__snapshot_profile_simple.snap  muster__config__profile__tests__snapshot_profile_with_panes.snap  muster__config__settings__tests__snapshot_settings_default.snap  muster__config__settings__tests__snapshot_settings_populated.snap
crates/muster/src/emulator/: ghostty.rs  mod.rs
crates/muster/src/session/: mod.rs  theme.rs
crates/muster/src/session/snapshots/: muster__session__theme__tests__snapshot_theme_commands.snap
crates/muster/src/tmux/: client.rs  control.rs  mod.rs  types.rs
docs/: compliance-plan.md  refactor-plan.md
docs/src/: SUMMARY.md  cli-reference.md  introduction.md
docs/src/development/: contributing.md  testing.md
docs/src/getting-started/: quick-start.md
docs/src/user-guide/: colors.md  concepts.md  configuration.md  peek.md  pin-unpin.md  profiles.md  sessions.md
