[workspace]
members = ["crates/muster", "crates/muster-cli", "crates/muster-notify"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sbb/muster"

[workspace.dependencies]
# Internal
muster = { path = "crates/muster" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Async
tokio = { version = "1", features = ["process", "io-util", "sync", "rt-multi-thread", "macros", "time", "signal"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Utilities
dirs = "6"
which = "7"
uuid = { version = "1", features = ["v4"] }

# TOML
toml = "0.8"

# Dev/test
tempfile = "3"
rstest = "0.25"
assert_cmd = "2"
predicates = "3"
tokio-test = "0.4"
insta = { version = "1", features = ["json"] }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
similar_names = "allow"
