[package]
name = "muster-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal session group management CLI"

[[bin]]
name = "muster"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
muster = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
dirs = { workspace = true }
which = { workspace = true }
