[package]
name = "muster-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal session group management CLI"

[lib]
name = "muster_cli"
path = "src/cli.rs"

[[bin]]
name = "muster"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
muster = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
dirs = { workspace = true }
which = { workspace = true }
toml = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }
clap-markdown = "0.1"
